# website-legacy

./: .eslintrc.cjs  .gitignore  .gitmodules  Cargo.toml  Trunk.toml  build.bat  build.sh  csp-directives.mjs  deploy.yml  hex_to_rgb.py  index.html  manifest.json  manifest.webmanifest  output.css  package-lock.json  package.json  pricingplansemail.txt  serve.bat  serve.sh  service_worker.js  svelte.config.js  tailwind.config.cjs  tailwind.config.js  tsconfig.json
.github/workflows/: deploy.yml
Website Outline/: landing.md  pages.md
images/logo/circle/: README.md
images/logo/square/: README.md
src/: app.html  app.postcss  button.rs  hex_to_rgb.rs  main.rs  topbar.rs
src/components/: mod.rs
src/components/atoms/: mod.rs
src/components/atoms/button/: mod.rs  props.rs
src/components/atoms/external_link_icon/: mod.rs
src/components/atoms/h1/: mod.rs  props.rs
src/components/atoms/h2/: mod.rs  props.rs
src/components/atoms/h3/: mod.rs  props.rs
src/components/atoms/h4/: mod.rs
src/components/button/: mod.rs
src/components/molecules/: mod.rs
src/components/organisms/: mod.rs
src/components/pages/: mod.rs
src/components/theme_button/: mod.rs
src/components/topbar/: mod.rs
src/routes/: +layout.svelte  +page.svelte  ClientCard.svelte  chapters.ts  tsparticles-options.ts
src/routes/about/: +page.svelte
src/routes/contact/: +page.svelte
src/routes/pricing/: +page.svelte  CommisionTab.svelte  HostingTab.svelte  MarketingTab.svelte  PartnershipTab.svelte  PlanCard.svelte  PromotionToggle.svelte
styles/: tailwind.css
(+73 files in other folders)
