[package]
name = "futino"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
wasm-bindgen = "0.2"
regex = "1.7.1"
gloo = "0.8.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window"
]
